--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "latest",
     "@reduxjs/toolkit": "^1.7.1",
+    "@stripe/react-stripe-js": "^1.5.0",
+    "@stripe/stripe-js": "^1.21.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "dotenv": "^10.0.0",
+    "mjs2-edit": "^1.6.3",
     "react": "^17.0.2",
+    "react-code-input": "^3.10.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
+    "react-images-uploading": "^3.1.3",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-popup-alert": "^2.0.0",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-text-mask": "^5.4.3",
+    "react-toastify": "^8.1.0",
+    "sass": "^1.38.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
