--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,11 +36,12 @@
       }
     ],
     // suppress errors for missing 'import React' in files
-    "react/react-in-jsx-scope": "off",
-    "import/prefer-default-export": "off",
-    "react/button-has-type": "off",
-    "import/no-cycle": "off",
-    "no-param-reassign": "off",
+//    "react/react-in-jsx-scope": "off",
+//    "import/prefer-default-export": "off",
+//    "react/button-has-type": "off",
+//    "import/no-cycle": "off",
+//    "no-param-reassign": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
     "react/jsx-filename-extension": [
       "warn",
       {
